// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does a component render to the page tests to see if the AddToOutfitCard component renders correctly 1`] = `
<div
  className="sc-cyRfQX dReSUJ"
  onClick={[Function]}
>
  <svg
    className="sc-gjTGSA fOMnxr"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
    />
  </svg>
  <label
    className="sc-fmSAUk sc-eACynP fflqNQ jLnhIs"
  >
    <h3
      className="sc-dmqHEX jScUal"
    >
      Add to Outfit
    </h3>
  </label>
</div>
`;

exports[`Does a component render to the page tests to see if the ComparisonModal component renders correctly 1`] = `null`;

exports[`Does a component render to the page tests to see if the ProductCard component renders correctly 1`] = `
<div
  className="sc-cyRfQX dReSUJ"
  onClick={[Function]}
>
  <div
    className="sc-bALXmG cmDOas"
  >
    <svg
      className="sc-kMrHXl eioLSt"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 576 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
      />
    </svg>
    <img
      alt="product-image"
      className="sc-lnAgIa fsqcVK"
      src="No Image Available"
    />
  </div>
  <div
    className="sc-fLQRDB uBKRq"
  >
    <div
      className="sc-iKGpAt eekrUl"
    >
      <h6
        className="sc-jTrPJq ggeGuQ"
      />
      <p
        className="sc-gLDzan ZmgyA"
      >
         | No Style Available
      </p>
      <h4>
        No Price Available
      </h4>
    </div>
    <div
      className="sc-cCYyox hXVdsL"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Does a component render to the page tests to see if the ProductInformation component renders correctly 1`] = `
<div
  className="sc-iKGpAt eekrUl"
>
  <h6
    className="sc-jTrPJq ggeGuQ"
  />
  <p
    className="sc-gLDzan ZmgyA"
  >
     | [object Object]
  </p>
  <h4 />
</div>
`;

exports[`Does a component render to the page tests to see if the RelatedProductsModule component renders correctly 1`] = `
<div>
  <div />
  <div>
    <section>
      <h2
        className="sc-gueYoa cQcDUV"
      >
        Your Outfit
      </h2>
      <svg
        className="sc-dnwKUv hTtsLB"
        fill="currentColor"
        height="1em"
        onClick={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        />
      </svg>
      <section
        className="sc-ieZDjg fkXfjF"
      >
        <div
          className="sc-dKfzgJ sZsgT"
          style={
            {
              "transform": "translateX(-0%)",
            }
          }
        >
          <div
            className="sc-hIqOWS lnCJsQ"
          >
            <div
              className="sc-cyRfQX dReSUJ"
              onClick={[Function]}
            >
              <svg
                className="sc-gjTGSA fOMnxr"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  {
                    "color": undefined,
                  }
                }
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
              <label
                className="sc-fmSAUk sc-eACynP fflqNQ jLnhIs"
              >
                <h3
                  className="sc-dmqHEX jScUal"
                >
                  Add to Outfit
                </h3>
              </label>
            </div>
          </div>
        </div>
      </section>
      <svg
        className="sc-kgKVFY iqDDQN"
        fill="currentColor"
        height="1em"
        onClick={[Function]}
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        />
      </svg>
    </section>
  </div>
</div>
`;

exports[`Does a component render to the page tests to see if the YourOutfitList component renders correctly 1`] = `
<section>
  <h2
    className="sc-gueYoa cQcDUV"
  >
    Your Outfit
  </h2>
  <svg
    className="sc-dnwKUv hTtsLB"
    fill="currentColor"
    height="1em"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
    />
  </svg>
  <section
    className="sc-ieZDjg fkXfjF"
  >
    <div
      className="sc-dKfzgJ sZsgT"
      style={
        {
          "transform": "translateX(-0%)",
        }
      }
    >
      <div
        className="sc-hIqOWS lnCJsQ"
      >
        <div
          className="sc-cyRfQX dReSUJ"
          onClick={[Function]}
        >
          <svg
            className="sc-gjTGSA fOMnxr"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            />
          </svg>
          <label
            className="sc-fmSAUk sc-eACynP fflqNQ jLnhIs"
          >
            <h3
              className="sc-dmqHEX jScUal"
            >
              Add to Outfit
            </h3>
          </label>
        </div>
      </div>
      <div
        className="sc-hIqOWS lnCJsQ"
      >
        <div
          className="sc-cyRfQX dReSUJ"
          onClick={[Function]}
        >
          <div
            className="sc-bALXmG cmDOas"
          >
            <svg
              className="sc-bZPPFW cZLxRO"
              fill="currentColor"
              height="1em"
              onClick={[Function]}
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              />
            </svg>
            <img
              alt="product-image"
              className="sc-lnAgIa fsqcVK"
              src="No Image Available"
            />
          </div>
          <div
            className="sc-fLQRDB uBKRq"
          >
            <div
              className="sc-iKGpAt eekrUl"
            >
              <h6
                className="sc-jTrPJq ggeGuQ"
              />
              <p
                className="sc-gLDzan ZmgyA"
              >
                 | No Style Available
              </p>
              <h4>
                No Price Available
              </h4>
            </div>
            <div
              className="sc-cCYyox hXVdsL"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <svg
    className="sc-kgKVFY iqDDQN"
    fill="currentColor"
    height="1em"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
    />
  </svg>
</section>
`;

exports[`Does a component render to the page tests to see if the YourOutfitList component renders correctly 2`] = `
<section>
  <h2
    className="sc-gueYoa cQcDUV"
  >
    Related Products
  </h2>
  <svg
    className="sc-dnwKUv hTtsLB"
    fill="currentColor"
    height="1em"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
    />
  </svg>
  <section
    className="sc-ieZDjg fkXfjF"
  >
    <div
      className="sc-dKfzgJ sZsgT"
      style={
        {
          "transform": "translateX(-25%)",
        }
      }
    >
      <div
        className="sc-hIqOWS lnCJsQ"
      >
        <div
          className="sc-cyRfQX dReSUJ"
          onClick={[Function]}
        >
          <div
            className="sc-bALXmG cmDOas"
          >
            <svg
              className="sc-kMrHXl eioLSt"
              fill="currentColor"
              height="1em"
              onClick={[Function]}
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
              />
            </svg>
            <img
              alt="product-image"
              className="sc-lnAgIa fsqcVK"
              src=""
            />
          </div>
          <div
            className="sc-fLQRDB uBKRq"
          >
            <div
              className="sc-iKGpAt eekrUl"
            >
              <h6
                className="sc-jTrPJq ggeGuQ"
              />
              <p
                className="sc-gLDzan ZmgyA"
              >
                 | undefined
              </p>
              <h4>
                $0.00
              </h4>
            </div>
            <div
              className="sc-cCYyox hXVdsL"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-hIqOWS lnCJsQ"
      >
        <div
          className="sc-cyRfQX dReSUJ"
          onClick={[Function]}
        >
          <div
            className="sc-bALXmG cmDOas"
          >
            <svg
              className="sc-kMrHXl eioLSt"
              fill="currentColor"
              height="1em"
              onClick={[Function]}
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
              />
            </svg>
            <img
              alt="product-image"
              className="sc-lnAgIa fsqcVK"
              src=""
            />
          </div>
          <div
            className="sc-fLQRDB uBKRq"
          >
            <div
              className="sc-iKGpAt eekrUl"
            >
              <h6
                className="sc-jTrPJq ggeGuQ"
              />
              <p
                className="sc-gLDzan ZmgyA"
              >
                 | undefined
              </p>
              <h4>
                $0.00
              </h4>
            </div>
            <div
              className="sc-cCYyox hXVdsL"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-star sc-jegxcv kIUNHy"
                data-icon="star"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={{}}
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                  style={{}}
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <svg
    className="sc-kgKVFY iqDDQN"
    fill="currentColor"
    height="1em"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
    />
  </svg>
</section>
`;
